# mcp-apple-notes-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.html  README.md  README_fixed.md  main.py  manifest.json  pyproject.toml  render_readme.py  requirements.txt  ruff.toml  run.sh
.claude/: settings.json
.claude/commands/: major-release.md  minor-release.md  patch-release.md
.github/workflows/: README.md  quality.yml  release.yml  test.yml
scripts/: __init__.py  package_dxt.py
tests/: conftest.py  test_create_note.py  test_get_notes.py  test_list_notes.py  test_search_notes.py
