[project]
name = "mcp-apple-notes-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "macnotesapp"
]

[tool.uv]
dev-dependencies = [
    "dxt"
]

[project.scripts]
package-dxt = "scripts.package_dxt:main"
