[project]
name = "mcp-apple-notes-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "macnotesapp",
    "markdown",
    "apple-notes-parser"
]

[tool.uv]
dev-dependencies = [
    "dxt"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
]

[project.scripts]
package-dxt = "scripts.package_dxt:main"
